allow shelly traffic to/from home assistant

--- a/firewall_zones/vyos_home/home/from-services-ipv4.yml
+++ b/firewall_zones/vyos_home/home/from-services-ipv4.yml
@@ -20,3 +20,11 @@
     group:
       address_group: ESPHOME-v4
       port_group: ESPHOME
+- description: Allow Access to Shelly Devices
+  action: accept
+  state:
+    new: true
+  destination:
+    group:
+      address_group: SHELLY-v4
+      port_group: SHELLY
