actually upgrade versions of managed software

--- a/roles/devsetup/tasks/download.yml
+++ b/roles/devsetup/tasks/download.yml
@@ -5,58 +5,58 @@
     owner: sdwilsh
     path: ~sdwilsh/.local/download
     state: directory
-- name: "Fetch {{ item.executable }} sha256"
+- name: "Fetch {{ item.executable }} {{ item.version }} sha256"
   ansible.builtin.get_url:
-    dest: "~sdwilsh/.local/download/{{ item.executable }}.sha256"
+    dest: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}.sha256"
     group: sdwilsh
     owner: sdwilsh
     url: "{{ item.sha256 }}"
   register: fetch_sha256 
   when: "'sha256' in item"
-- name: "Consume {{ item.executable }} sha256"
+- name: "Consume {{ item.executable }} {{ item.version }} sha256"
   ansible.builtin.slurp:
-    src: "~sdwilsh/.local/download/{{ item.executable }}.sha256"
+    src: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}.sha256"
   changed_when: no
   register: sha256
   when: "'sha256' in item"
-- name: "Fetch {{ item.executable }} archive"
+- name: "Fetch {{ item.executable }} {{ item.version }} archive"
   ansible.builtin.get_url:
     checksum: "{% if 'sha256' in item %}sha256:{{ sha256['content'] | b64decode | trim }}{% endif %}"
-    dest: "~sdwilsh/.local/download/{{ item.executable }}.tar.gz"
+    dest: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}.tar.gz"
     group: sdwilsh
     owner: sdwilsh
     url: "{{ item.targz }}"
   register: fetch_archive
   when: "'targz' in item"
-- name: "Install {{ item.executable }} from Archive"
+- name: "Install {{ item.executable }} {{ item.version }} from Archive"
   ansible.builtin.unarchive:
     dest: ~sdwilsh/.local/bin/
     group: sdwilsh
     owner: sdwilsh
     remote_src: yes
-    src: "~sdwilsh/.local/download/{{ item.executable }}.tar.gz"
+    src: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}.tar.gz"
   when: "'targz' in item and fetch_archive.changed"
-- name: "Fetch {{ item.executable }} Executable"
+- name: "Fetch {{ item.executable }} {{ item.version }} Executable"
   ansible.builtin.get_url:
     checksum: "sha256:{{ sha256['content'] | b64decode | trim }}"
-    dest: "~sdwilsh/.local/download/{{ item.executable }}"
+    dest: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}"
     group: sdwilsh
     owner: sdwilsh
     url: "{{ item.bin }}"
   when: "'bin' in item and 'sha256' in item"
-- name: "Fetch {{ item.executable }} Executable Without SHA256 Check"
+- name: "Fetch {{ item.executable }} {{ item.version }} Executable Without SHA256 Check"
   ansible.builtin.get_url:
-    dest: "~sdwilsh/.local/download/{{ item.executable }}"
+    dest: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}"
     group: sdwilsh
     owner: sdwilsh
     url: "{{ item.bin }}"
   when: "'bin' in item and not 'sha256' in item"
 - name: "Install {{ item.executable }} Executable"
   ansible.builtin.copy:
-    dest: ~sdwilsh/.local/bin/
+    dest: "~sdwilsh/.local/bin/{{ item.executable }}"
     group: sdwilsh
     mode: u=rx,g=rx
     owner: sdwilsh
     remote_src: yes
-    src: "~sdwilsh/.local/download/{{ item.executable }}"
+    src: "~sdwilsh/.local/download/{{ item.executable }}-{{ item.version }}"
   when: "'bin' in item"
