--- a/roles/devsetup/tasks/main.yml
+++ b/roles/devsetup/tasks/main.yml
@@ -37,16 +37,21 @@
   loop:
     - executable: argocd
       bin: "https://github.com/argoproj/argo-cd/releases/download/{{ argocd_version }}/argocd-linux-{{ deb_architecture[ansible_architecture] }}"
+      version: "{{ argocd_version }}"
     - executable: kubectl
       sha256: "https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl.sha256"
       bin: https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/{{ deb_architecture[ansible_architecture] }}/kubectl
+      version: "{{ kubectl_version }}"
     - executable: kustomize
       targz: "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize/{{ kustomize_version }}/kustomize_{{ kustomize_version }}_linux_{{ deb_architecture[ansible_architecture] }}.tar.gz"
+      version: "{{ kustomize_version }}"
     - executable: starship
       sha256: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz.sha256"
       targz: "https://github.com/starship/starship/releases/download/{{ starship_version }}/starship-{{ ansible_architecture }}-unknown-linux-musl.tar.gz"
+      version: "{{ starship_version }}"
     - executable: virtctl
       bin: "https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-{{ deb_architecture[ansible_architecture] }}"
+      version: "{{ virtctl_version }}"
   vars:
     deb_architecture:
       x86_64: amd64
