fix frigate component for kustomize v5.3.0

--- a/kustomization/overlays/prod/homeassistant/kustomization.yml
+++ b/kustomization/overlays/prod/homeassistant/kustomization.yml
@@ -8,8 +8,7 @@ components:
   - ../../../components/homeassistant
   - ../../../components/mosquitto
 configMapGenerator:
-  - behavior: replace
-    files:
+  - files:
       - configmap/frigate/config.yml
     name: frigate-configmap
   - files:
