add PERFMON capability to get GPU stats

--- a/kustomization/components/frigate/statefulset.yml
+++ b/kustomization/components/frigate/statefulset.yml
@@ -55,6 +55,9 @@ spec:
               squat.ai/quicksync: 1
           securityContext:
             allowPrivilegeEscalation: false
+            capabilities:
+              add:
+                - PERFMON
             seccompProfile:
               type: RuntimeDefault
           volumeMounts:
