add missing media mount

--- a/kustomization/components/frigate/statefulset.yml
+++ b/kustomization/components/frigate/statefulset.yml
@@ -65,6 +65,8 @@ spec:
               mountPath: /config
             - name: frigate-db
               mountPath: /db
+            - name: frigate-media
+              mountPath: /media/frigate
             - name: frigate-shm
               mountPath: /dev/shm
             - name: frigate-tmp
