--- a/kustomization/components/frigate/statefulset.yml
+++ b/kustomization/components/frigate/statefulset.yml
@@ -54,9 +54,7 @@ spec:
               squat.ai/coraltpu: 1
               squat.ai/quicksync: 1
           securityContext:
-            capabilities:
-              add:
-                - PERFMON
+            allowPrivilegeEscalation: false
             seccompProfile:
               type: RuntimeDefault
           volumeMounts:
