--- a/group_vars/vyos_hogs.yml
+++ b/group_vars/vyos_hogs.yml
@@ -185,6 +185,9 @@ vyos_firewall_global__group:
         - address: "10.66.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "10.67.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "10.117.0.{{ vyos__peer_host_id_ipv4 }}"
+    - name: PRINTER-v4
+      members:
+        - address: 10.117.0.14 # printer.hogs.tswn.us
     - name: PROXIED-SERVICES-v4
       description: Services not on the SERVICES network that are proxied through it.
       members:
@@ -260,6 +263,11 @@ vyos_firewall_global__group:
     - name: NTP
       members:
         - port: 123
+    - name: PRINTER
+      description: Ports used to connect to the Brother printer from SERVICES network.
+      members:
+        - port: 34068
+        - port: 161
     - name: PROXIED-PORTS
       members:
         - port: 80
