add zwave stick to generic device plugin

--- a/kustomization/overlays/prod/generic-device-plugin/kustomization.yml
+++ b/kustomization/overlays/prod/generic-device-plugin/kustomization.yml
@@ -18,5 +18,9 @@ patches:
       kind: DaemonSet
       name: generic-device-plugin
     path: patches/add_quicksync.yml
+  - target:
+      kind: DaemonSet
+      name: generic-device-plugin
+    path: patches/add_zstick7.yml
 resources:
   - namespace.yml
