--- a/kustomization/overlays/prod/homeassistant/kustomization.yml
+++ b/kustomization/overlays/prod/homeassistant/kustomization.yml
@@ -7,6 +7,7 @@ components:
   - ../../../components/frigate
   - ../../../components/homeassistant
   - ../../../components/mosquitto
+  - ../../../components/zwavejs
 configMapGenerator:
   - files:
       - configmap/frigate/config.yml
