add bypass for some of home assistant on the local network in order to allow home assistant app

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -29,6 +29,16 @@ access_control:
         - 10.117.0.23 # loki.hogs.tswn.us
         - 10.117.0.24 # monitor.house.gem.hogs.tswn.us
       policy: bypass
+    - domain: homeassistant.hogs.tswn.us
+      networks:
+        - home
+      policy: bypass
+      resources:
+        - ^/.external_auth=.$
+        - ^/api.*$
+        - ^/auth/token/.*$
+        - ^/service_worker.js$
+        - ^/static/.*$
     - domain: opensprinkler.hogs.tswn.us
       networks:
         - home
