enable generic hygrostat on local instance

--- a/kustomization/overlays/prod/homeassistant/patches/homeassistant/setup_config.yml
+++ b/kustomization/overlays/prod/homeassistant/patches/homeassistant/setup_config.yml
@@ -10,6 +10,8 @@ spec:
         - env:
             - name: HTTP_TRUSTED_PROXIES
               value: 172.16.0.0/16
+            - name: INCLUDE_GENERIC_HYGROSTAT
+              value: "1"
             - name: RECORDER_DATABASE_NAME
               value: homeassistant
             - name: RECORDER_HOSTNAME
