allow services to talk to hue

--- a/firewall_zones/vyos_home/home/from-services-ipv4.yml
+++ b/firewall_zones/vyos_home/home/from-services-ipv4.yml
@@ -51,3 +51,10 @@
     group:
       address_group: PRINTER-v4
       port_group: PRINTER
+- description: Allow access to proxied services
+  action: accept
+  protocol: tcp
+  destination:
+    group:
+      address_group: PROXIED-SERVICES-v4
+      port_group: PROXIED-PORTS
