--- a/group_vars/vyos_hogs.yml
+++ b/group_vars/vyos_hogs.yml
@@ -195,6 +195,7 @@ vyos_firewall_global__group:
         - address: 10.10.0.6
         # chanttogreen.hogs.tswn.us
         - address: 10.10.0.14
+        - address: 10.117.0.34 # hue.hogs.tswn.us
     - name: SERVICE-TALKERS-v4
       description: IP Addresses allowed to talk to all services
       members:
@@ -271,6 +272,7 @@ vyos_firewall_global__group:
     - name: PROXIED-PORTS
       members:
         - port: 80
+        - port: 443
         - port: 8080
     - name: SHELLY
       members:
