--- a/kustomization/components/vector-metrics-scraper/deployment.yml
+++ b/kustomization/components/vector-metrics-scraper/deployment.yml
@@ -1,11 +1,18 @@
 ---
-# Locally, it's best if this is kept as a hardlink to other patches with the same name!
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: this-is-ignored-but-is-required
+  name: vector-metrics-scraper-deployment
 spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: vector-metrics-scraper
+  strategy:
+    type: Recreate
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: vector-metrics-scraper
     spec:
       containers:
         - args:
@@ -26,6 +33,6 @@ spec:
             defaultMode: 420
             sources:
               - configMap:
-                  name: vector-config
+                  name: vector-metrics-scraper-config
         - emptyDir: {}
           name: vector-data
