--- a/kustomization/overlays/prod/argo-cd/namespace.yml
+++ b/kustomization/overlays/prod/argo-cd/namespace.yml
@@ -3,6 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce: baseline
     pod-security.kubernetes.io/enforce-version: latest
   name: argocd
