add namespace to config map

--- a/kustomization/overlays/prod/longhorn/kustomization.yml
+++ b/kustomization/overlays/prod/longhorn/kustomization.yml
@@ -7,6 +7,7 @@ components:
   - ../../../components/vector-metrics-scraper
 configMapGenerator:
   - name: vector-metrics-scraper-config
+    namespace: longhorn-system
     files:
       - configmap/vector.yml
 images:
