--- a/kustomization/overlays/prod/longhorn/kustomization.yml
+++ b/kustomization/overlays/prod/longhorn/kustomization.yml
@@ -4,7 +4,6 @@ kind: Kustomization
 
 components:
   - ../../../components/longhorn
-  - ../../../components/vector-metrics-scraper
 configMapGenerator:
   - name: vector-metrics-scraper-config
     namespace: longhorn-system
@@ -14,10 +13,10 @@ images:
   - name: timberio/vector
     newTag: 0.34.1-distroless-libc
 patches:
-  - path: patches/add_namespace_vector-metrics-scraper.yml
+  - path: patches/add_metrics_scraper.yml
     target:
-      kind: Deployment
-      name: vector-metrics-scraper-deployment
+      kind: DaemonSet
+      name: longhorn-manager
   - path: patches/change_ingress_host.yml
     target:
       kind: Ingress
