--- a/kustomization/overlays/prod/longhorn/patches/add_metrics_scraper.yml
+++ b/kustomization/overlays/prod/longhorn/patches/add_metrics_scraper.yml
@@ -10,6 +10,11 @@ spec:
         - args:
             - --config-dir
             - /etc/vector/
+          env:
+            - name: METRICS_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
           image: timberio/vector
           name: vector
           securityContext:
