set the timezone of esphome

--- a/kustomization/components/esphome/statefulset.yml
+++ b/kustomization/components/esphome/statefulset.yml
@@ -18,6 +18,8 @@ spec:
         - env:
             - name: ESPHOME_DASHBOARD_USE_PING
               value: "true"
+            - name: TZ
+              value: America/Los_Angeles
           image: esphome/esphome
           livenessProbe:
             httpGet:
