scrape esphome devices in home assistant vector scraper as well

--- a/kustomization/overlays/prod/homeassistant/patches/vector/add_secrets.yml
+++ b/kustomization/overlays/prod/homeassistant/patches/vector/add_secrets.yml
@@ -13,4 +13,9 @@ spec:
                 secretKeyRef:
                   name: vector-secret
                   key: bearer_token
+            - name: ESPHOME_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: vector-secret
+                  key: esphome_password 
           name: vector
