--- a/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
@@ -13,6 +13,16 @@ sinks:
       - homeassistant_metrics
     type: vector
 sources:
+  esphome_metrics:
+    auth:
+      strategy: password
+      username: vector
+      password: ${ESPHOME_PASSWORD:?unset_esphome_password}
+    endpoints:
+      - http://living-bluetooth-proxy.hogs.tswn.us/metrics
+      - http://office-bluetooth-proxy.hogs.tswn.us/metrics
+    scrape_interval_secs: 60
+    type: prometheus_scrape
   homeassistant_metrics:
     auth:
       strategy: bearer
