--- a/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
@@ -15,8 +15,8 @@ sinks:
 sources:
   esphome_metrics:
     auth:
-      strategy: password
-      username: vector
+      strategy: basic
+      user: vector
       password: ${ESPHOME_PASSWORD:?unset_esphome_password}
     endpoints:
       - http://living-bluetooth-proxy.hogs.tswn.us/metrics
