include esphome metrics in what we push

--- a/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
@@ -9,8 +9,9 @@ sinks:
   aggregator:
     address: aggregator.vector.svc.cluster.local:6000
     inputs:
-      - internal_metrics
+      - esphome_metrics
       - homeassistant_metrics
+      - internal_metrics
     type: vector
 sources:
   esphome_metrics:
