add an instance_tag to better track what endpoint is being hit

--- a/kustomization/components/traefik/configmap/vector.yml
+++ b/kustomization/components/traefik/configmap/vector.yml
@@ -29,6 +29,7 @@ sources:
   traefik_metrics:
     endpoints:
       - http://localhost:9090/metrics
+    instance_tag: vector_instance
     type: prometheus_scrape
   internal_metrics:
     type: internal_metrics
