--- a/kustomization/overlays/prod/argo-cd/configmap/vector.yml
+++ b/kustomization/overlays/prod/argo-cd/configmap/vector.yml
@@ -16,6 +16,7 @@ sources:
   argocd_metrics:
     endpoints:
       - http://argocd-metrics:8082/metrics
+    instance_tag: vector_instance
     type: prometheus_scrape
   internal_metrics:
     type: internal_metrics
