--- a/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
+++ b/kustomization/overlays/prod/homeassistant/configmap/vector/vector.yml
@@ -22,6 +22,7 @@ sources:
     endpoints:
       - http://living-bluetooth-proxy.hogs.tswn.us/metrics
       - http://office-bluetooth-proxy.hogs.tswn.us/metrics
+    instance_tag: vector_instance
     scrape_interval_secs: 300 # 5 minutes
     type: prometheus_scrape
   homeassistant_metrics:
@@ -30,6 +31,7 @@ sources:
       token: ${BEARER_TOKEN:?unset_bearer_token}
     endpoints:
       - http://homeassistant-svc:8081/api/prometheus
+    instance_tag: vector_instance
     scrape_interval_secs: 60
     scrape_timeout_secs: 15
     type: prometheus_scrape
