--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -20,7 +20,7 @@
   when: ansible_distribution == "Ubuntu"
 - name: "Ensure ansible is installed"
   ansible.builtin.package:
-    name: "{% if ansible_distribution == 'FreeBSD' %}sysutils/ansible{% else %}ansible{% endif %}"
+    name: ansible
     state: "present"
 - name: Ensure python deps are installed
   ansible.builtin.pip:
@@ -77,22 +77,6 @@
     group: "root"
     mode: "u=rw,g=r,o=r"
     src: "logrotate-ansible.j2"
-- name: "Ensure /usr/local/etc/newsyslog.conf.d/ exists"
-  when: ansible_distribution == "FreeBSD"
-  ansible.builtin.file:
-    group: "wheel"
-    mode: "u=rwx,g=rx,o=rx"
-    owner: "root"
-    path: "/usr/local/etc/newsyslog.conf.d"
-    state: "directory"
-- name: "Install newsyslog conf for ansible logs"
-  when: ansible_distribution == "FreeBSD"
-  ansible.builtin.template:
-    dest: "/usr/local/etc/newsyslog.conf.d/ansible.conf"
-    owner: "root"
-    group: "wheel"
-    mode: "u=rw,g=r,o=r"
-    src: "newsyslog-ansible.conf.j2"
 - name: Set environment in cron file for ARA API Client
   ansible.builtin.cron:
     name: "ARA_API_CLIENT"
