--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -21,4 +21,5 @@ resources:
   - application/redis.yml
   - application/traefik.yml
   - application/unifi.yml
+  - application/valheim-forerunner.yml
   - application/vector.yml
