--- a/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
@@ -39,3 +39,12 @@
       address_group: UNIFI-v4
       port_group: UNIFI-WEB-TCP
   protocol: tcp
+- action: accept
+  description: Allow Valheim Traffic
+  destination:
+    group:
+      address_group: VALHEIM-v4
+      port_group: VALHEIM
+  protocol: udp
+  state:
+    new: true
