--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -5,6 +5,9 @@ vyos_dns_forwarding__domain_servers:
   - domain: 0.10.10.in-addr.arpa
     servers:
       - 10.10.0.1
+  - domain: 0.11.10.in-addr.arpa
+    servers:
+      - 10.10.0.1
   - domain: 0.117.10.in-addr.arpa
     servers:
       - 10.10.0.1
@@ -26,10 +29,13 @@ vyos_firewall_global__group:
       description: The v4 address of the Unifi Controller
       afi: ipv4
       members:
-        # unifi.tswn.us
-        - address: 10.11.1.64
-        # unifi-inform.tswn.us
-        - address: 10.11.1.65
+        - address: 10.11.1.64 # unifi.tswn.us
+        - address: 10.11.1.65 # unifi-inform.tswn.us
+    - name: VALHEIM-v4
+      description: All Valheim servers
+      afi: ipv4
+      members:
+        - address: 10.11.1.67 # valheim-forerunner.tswn.us
   port_group:
     - name: UNIFI-DEVICE-TCP
       description: Ports used by the Unifi Controller to talk to devices over TCP
@@ -43,6 +49,12 @@ vyos_firewall_global__group:
       description: Ports used by the Unifi Controller for clients
       members:
         - port: 443
+    - name: VALHEIM
+      description: Ports used by Valheim servers.  Each server uses three consecutive ports over UDP.
+      members:
+        - port: 2456
+        - port: 2457
+        - port: 2458
 
 vyos_firewall__zones:
   - name: CLOUD
